# ai-trading-team

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  env.example  main.py  mypy.ini  pyproject.toml  restart.sh
deploy/: README.md  ai-trading.service  install.sh
docs/: CONCEPTS.md  STRATEGY.md  STRATEGY_LIFECYCLE.md  USER_INSTRUCTIONS.md  weex-competition.md
sessions/: cmt_dogeusdt_session.json
src/ai_trading_team/: __init__.py  config.py  logging.py
src/ai_trading_team/agent/: __init__.py  commands.py  llm.py  prompts.py  prompts_long.py  prompts_neutral.py  schemas.py  trader.py
src/ai_trading_team/audit/: __init__.py  manager.py  models.py  writer.py
src/ai_trading_team/audit/uploaders/: __init__.py  base.py  weex.py
src/ai_trading_team/core/: __init__.py  data_pool.py  events.py  health.py  session.py  signal_queue.py  types.py
src/ai_trading_team/data/: __init__.py  manager.py  models.py
src/ai_trading_team/data/binance/: __init__.py  rest.py  stream.py
src/ai_trading_team/execution/: __init__.py  base.py  dry_run.py  manager.py  mock_executor.py  models.py
src/ai_trading_team/indicators/: __init__.py  base.py  registry.py  technical.py  volatility.py
src/ai_trading_team/notifications/: __init__.py  telegram.py
src/ai_trading_team/risk/: __init__.py  actions.py  monitor.py  rules.py
src/ai_trading_team/strategy/: __init__.py  base.py  conditions.py  orchestrator.py  signals.py  state_machine.py
src/ai_trading_team/ui/: __init__.py  app.py
tests/: conftest.py  test_agent_response_parsing.py
(+44 files in other folders)
